src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Donation</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Pledged</fullName>
        </values>
        <values>
            <fullName>Posted</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>npe01__Contact_Id_for_Role__c</fullName>
        <inlineHelpText>Hidden field for passing a Contact Id for Contact Role creation.</inlineHelpText>
        <label>Contact Id for Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Is_Opp_From_Individual__c</fullName>
        <formula>IF( Account.npe01__SYSTEMIsIndividual__c, &apos;true&apos;, &apos;false&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Opp From Individual</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Member_Level__c</fullName>
        <label>Member Level</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SuperDuper Member</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__Membership_End_Date__c</fullName>
        <inlineHelpText>Date membership period ends.</inlineHelpText>
        <label>Membership End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe01__Membership_Origin__c</fullName>
        <inlineHelpText>Is this a renewal, a new membership, or a membership with someone who lapsed and has returned.</inlineHelpText>
        <label>Membership Origin</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reacquire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npe01__Membership_Start_Date__c</fullName>
        <inlineHelpText>Date when membership period starts</inlineHelpText>
        <label>Membership Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe03__Recurring_Donation__c</fullName>
        <label>Recurring Donation</label>
        <referenceTo>npe03__Recurring_Donation__c</referenceTo>
        <relationshipLabel>Donations</relationshipLabel>
        <relationshipName>Donations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npo02__CombinedRollupFieldset__c</fullName>
        <description>Concatenated fields used during rollups to locate the most recent opportunity.</description>
        <formula>TEXT(CloseDate) + &apos;;|;&apos;+ TEXT(Amount) + &apos;;|;&apos;+ TEXT(npe01__Member_Level__c) + &apos;;|;&apos;+ TEXT(npe01__Membership_Origin__c) + &apos;;|;&apos; +  Id</formula>
        <inlineHelpText>Concatenated fields used during rollups to locate the most recent opportunity.</inlineHelpText>
        <label>Combined Rollup Fieldset</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__CurrentGenerators__c</fullName>
        <label>Current Generator(s) - DEPRECATED</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status- DEPRECATED</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>npo02__MainCompetitors__c</fullName>
        <label>Main Competitor(s) - DEPRECATED</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__OrderNumber__c</fullName>
        <label>Order Number - DEPRECATED</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__TrackingNumber__c</fullName>
        <label>Tracking Number - DEPRECATED</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npo02__systemHouseholdContactRoleProcessor__c</fullName>
        <inlineHelpText>Controls if Household contact roles are created for Opportunities</inlineHelpText>
        <label>_SYSTEM: HOUSEHOLD CONTACT ROLEPROCESSOR</label>
        <picklist>
            <picklistValues>
                <fullName>All Opportunities</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No Opportunities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllDonations</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Donation</value>
        </filters>
        <label>All Donations</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Membership</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Membership</value>
        </filters>
        <label>Membership</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Donation</fullName>
        <active>true</active>
        <businessProcess>Donation</businessProcess>
        <description>Donation Received</description>
        <label>Donation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grant</fullName>
        <active>true</active>
        <businessProcess>Donation</businessProcess>
        <description>Grant Received</description>
        <label>Grant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Membership</fullName>
        <active>true</active>
        <businessProcess>Donation</businessProcess>
        <label>Membership</label>
    </recordTypes>
</CustomObject>